Bug 105229 - Crash when hitting Quit in Safe Mode dialog
Summary: Crash when hitting Quit in Safe Mode dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.1 rc
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.1
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-10 05:37 UTC by Aron Budea
Modified: 2017-02-24 06:14 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["ToolBox::GetDefaultImageSize(ToolBoxButtonSize)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2017-01-10 05:37:38 UTC
1. Restart LibreOffice in Safe Mode.
2. In the Safe Mode dialog, hit Quit.

=> Crash.

Reproduced with 5.3.0.1 and 5.4 daily build / Windows 7.

Crash report in 5.3.0.1:
http://crashreport.libreoffice.org/stats/crash_details/c491752e-bb7e-463f-a283-1b1deb0b2283

Version: 5.4.0.0.alpha0+
Build ID: 215cbfb460326010737433c2020638e9388a88a4
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-01-02_23:58:32
Locale: hu-HU (hu_HU); Calc: CL
Comment 1 Telesto 2017-01-10 19:46:52 UTC
Confirming with:
Versie: 5.3.0.1 
Build ID: 3b800451b1d0c48045de03b5b3c7bbbac87f20d9
CPU Threads: 4; Versie besturingssysteem:Windows 6.2; UI Render: standaard; Layout Engine: new; 
Locale: nl-NL (nl_NL); Calc: CL

but not with:
Version: 5.4.0.0.alpha0+
Build ID: 5adab0927483d039037b0f93894627e41a2c72f2
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-01-09_23:34:00
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 MM 2017-01-10 22:40:53 UTC
Confirmed with Version: 5.4.0.0.alpha0+
Build ID: 62a94dcf0c750e335d6ce272d8a5df9813910d5a
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-01-09_22:47:14
Locale: en-US (en_US.UTF-8); Calc: single

crashreport.libreoffice.org/stats/crash_details/a94a1934-98e0-4db1-aaab-bc766f5ebcc8
Comment 3 Aron Budea 2017-01-11 02:23:24 UTC
Wow, a Linux crash report, those are a rare breed.
Still reproduced with the following daily build.

Version: 5.4.0.0.alpha0+
Build ID: db4badfc971b9cc60809c3408f579bae04a77c34
CPU Threads: 4; OS Version: Windows 6.1; UI Render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-01-10_23:25:07
Locale: hu-HU (hu_HU); Calc: CL
Comment 4 Caolán McNamara 2017-02-09 15:38:50 UTC
This is basically fixed in master by...

commit 29b13a24cf5f0e6e58641d4a55cdfa03c83b68ac
Author: Katarina Behrens <Katarina.Behrens@cib.de>
Date:   Fri Jan 13 23:17:52 2017 +0100

    SafeModeDialog: restart in normal mode instead of quitting
    
    Change-Id: I546629656ada6c7a8a15b4dc77a042e1f1106924
    Reviewed-on: https://gerrit.libreoffice.org/33059
    Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
    Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>
Comment 5 Commit Notification 2017-02-16 10:42:30 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2b60861a84b3e28cc110110e762fba5d6fbc43dd&h=libreoffice-5-3

Resolves: tdf#105229 restart in normal mode instead of quitting

It will be available in 5.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Markus Mohrhard 2017-02-22 23:51:20 UTC
Based on http://crashreport.libreoffice.org/stats/crash_details/2de31c06-da20-4280-916a-e282a337b16b this seems to be more likely fixed with b57bfba7c1f331e13ca995c493c2973d67aa5021 by Michael.

This seems to be a shutdown crash that is caused by the early point in the start-up that we call shutdown.
Comment 7 Aron Budea 2017-02-24 06:13:19 UTC
I confirm that there's no crash anymore in the daily build referenced below.

Btw, when I was retesting now with the crashing old version, the crash only occurred if safe mode was initiated from Writer/Calc/etc. (+ the Quit step), and not from the Start Center. Just to be clear about the original repro steps.

It's all good now, so closing as FIXED.


Version: 5.4.0.0.alpha0+
Build ID: a8538f0774bd0fabf6012d735d1e86b3ff1c291f
CPU threads: 4; OS: Windows 6.1; UI render: GL; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2017-02-23_23:42:53
Locale: hu-HU (hu_HU); Calc: CL