Resolves: tdf#105229 restart in normal mode instead of quitting

Change-Id: I546629656ada6c7a8a15b4dc77a042e1f1106924
Reviewed-on: https://gerrit.libreoffice.org/33059
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 29b13a24cf5f0e6e58641d4a55cdfa03c83b68ac)
Reviewed-on: https://gerrit.libreoffice.org/34096
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>